JDK 11: refactor processing of source-version flag and platform-module-system flags.
	Change on 2019/03/06 by antoniocortes <antoniocortes@google.com>

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=237105710